# webrtcProtocol

./: CMakeLists.txt  README.md  main.cpp  zlog.conf
browser/: fail.json  success.json  webrtc.html
browser/js/: main.js
browser/old/: webrtc.html
browser/old/js/: main.js
erizo/: CMakeLists.txt  IceConnection.cpp  IceConnection.h  MediaDefinitions.h  SdpInfo.cpp  SdpInfo.h  SrtpChannel.cpp  SrtpChannel.h  WebrtcConn.cpp  WebrtcConn.h  logger.h
erizo/MyIce/: IceServer.cpp  IceServer.h  MyIceConnection.cpp  MyIceConnection.h  StunPacket.cpp  StunPacket.hpp  UdpSocket.h  Utiils.cpp
erizo/dtls/: DtlsTransport.cpp  DtlsTransport.h
http/: HttpServer.cpp  HttpServer.h
json/: json.hpp:Zone.Identifier
key/: cert.crt  rsa_private.key
net/: BufferWriter.cpp  BufferWriter.h  CMakeLists.txt  EventLoop.cpp  MemoryManager.cpp  RingBuffer.h  Timer.h  Timestamp.h
openssl/lib/: libcrypto.so.1.1  libssl.so.1.1
openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
srtp/lib/pkgconfig/: libsrtp2.pc
zloglib/lib/: libzlog.so.1.2
